update tag picture

--- a/HTML-basico/Aula01/Tarefa/index.html
+++ b/HTML-basico/Aula01/Tarefa/index.html
@@ -9,20 +9,20 @@
     <body>
         <h1>Filmes</h1>
 
-        <ul>
-            <li><a href="#F1">Em busca do Vale Encantado</a></li>
-            <li><a href="#F2">Jurassic Park 1993</a></li>
-            <li><a href="#F3">Os Batutinhas</a></li>
-            <li><a href="#F4">Shrek</a></li>
-            <li><a href="#F5">Pânico 4</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#F1">Em busca do Vale Encantado</a></li>
+                <li><a href="#F2">Jurassic Park 1993</a></li>
+                <li><a href="#F3">Os Batutinhas</a></li>
+                <li><a href="#F4">Shrek</a></li>
+                <li><a href="#F5">Pânico 4</a></li>
+            </ul>
+        </nav>
       
         <hr/>
         <h2 id="F1">Em busca do Vale Encantado</h2> 
         <picture>
-            <source media="(min-width: 650px)" srcset="capas-dos-filmes/em-busca-do-vale-encantado.jpg">
-            <source media="(min-width: 465px)" srcset="capas-dos-filmes/em-busca-do-vale-encantado.jpg">
-            <img src="capas-dos-filmes/em-busca-do-vale-encantado.jpg"width="240" height="330">
+            <img src="capas-dos-filmes/em-busca-do-vale-encantado.jpg"width="240" height="330" alt="Capa do filme Em busca do vale encantado">
         </picture>
 
         <h3>Sinopse</h3>
@@ -38,9 +38,7 @@
         <hr/>
         <h2 id="F2">Jurassic Park 1993</h2>
         <picture>
-            <source media="(min-width: 650px)" srcset="capas-dos-filmes/jurassic-park.jpg">
-            <source media="(min-width: 465px)" srcset="capas-dos-filmes/jurassic-park.jpg">
-            <img src="capas-dos-filmes/jurassic-park.jpg"width="240" height="330">
+            <img src="capas-dos-filmes/jurassic-park.jpg"width="240" height="330" alt="Capa do filme Jurassic Park 1993">
         </picture>
 
         <h3>Sinopse</h3>
@@ -56,9 +54,7 @@
         <hr/>
         <h2 id="F3">Os Batutinhas</h2>
         <picture>
-            <source media="(min-width: 650px)" srcset="capas-dos-filmes/os-batutinhas.jpg">
-            <source media="(min-width: 465px)" srcset="capas-dos-filmes/os-batutinhas.jpg">
-            <img src="capas-dos-filmes/os-batutinhas.jpg" width="240" height="330">
+            <img src="capas-dos-filmes/os-batutinhas.jpg" width="240" height="330" alt="Capa do filme Os batutinhas">
         </picture>
 
         <h3>Sinopse</h3>
@@ -73,9 +69,7 @@
         <hr/>
         <h2 id="F4">Shrek</h2>
         <picture>
-            <source media="(min-width: 650px)" srcset="capas-dos-filmes/shrek.jpg">
-            <source media="(min-width: 465px)" srcset="capas-dos-filmes/shrek.jpg">
-            <img src="capas-dos-filmes/shrek.jpg" width="240" height="330">
+            <img src="capas-dos-filmes/shrek.jpg" width="240" height="330" alt="Capa do Shrek">
         </picture>
 
         <h3>Sinopse</h3>
@@ -95,9 +89,7 @@
         <hr/>
         <h2 id="F5">Pânico 4</h2>
         <picture>
-            <source media="(min-width: 650px)" srcset="capas-dos-filmes/panico-4.jpg">
-            <source media="(min-width: 465px)" srcset="capas-dos-filmes/panico-4.jpg">
-            <img src="capas-dos-filmes/panico-4.jpg" width="240" height="330">
+            <img src="capas-dos-filmes/panico-4.jpg" width="240" height="330" alt="Capa do filme Pânico 4">
         </picture>
 
         <h3>Sinopse</h3>
