--- a/HTML-CSS/Atividade-Final/index.html
+++ b/HTML-CSS/Atividade-Final/index.html
@@ -13,8 +13,8 @@
         <nav>
             <div class="menu-desktop">
                 <div class="container">
-                    <div id="logo">
-                        <h1>XR4GOOD</h1>
+                    <div class="logo">
+                        <img src="img/icon.png" alt="">
                     </div>
                     <div id="links">
                         <a>Home</a>
@@ -32,20 +32,53 @@
         </nav>
 
         <header>
-            <h2>
-                Realidade Estendida </br> para o bem </br> </br>
-            </h2>
+            <div class="container">
+                <h2>
+                    Realidade Estendida
+                    <span>para o bem</span> 
+                </h2>
+            </div>
         </header>
 
-        <section>
+        <section class="about">
             <div class="container">
-                <div id="main">
-                    <h2>Sobre nós</h2>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia modi ut maxime debitis! Assumenda pariatur voluptatem illum voluptatum accusantium ea molestiae dolorum facere, sed, aut blanditiis dolores a dignissimos?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus, aliquid! Commodi id dolore odit. Doloremque, eum ad. Repudiandae recusandae saepe ex eum ipsum vero, minima praesentium veniam architecto. Sint, perspiciatis.
-                    
+                <div class="main">
+                    <h2>Quem somos</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia 
+                        modi ut maxime debitis! Assumenda pariatur voluptatem illum voluptatum 
+                        accusantium ea molestiae dolorum facere, sed, aut blanditiis dolores a 
+                        dignissimos? 
+                    </p>
+                </div>
+                <div class="valores">
+                    <h2>Nossos Valores</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia 
+                        modi ut maxime debitis! Assumenda pariatur voluptatem illum voluptatum 
+                        accusantium ea molestiae dolorum facere, sed, aut blanditiis dolores a 
+                        dignissimos? 
+                    </p>
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="container">
+                <div class="address">
+                    <div class="logo">
+                        <img src="img/icon.png" alt="">
+                    </div>
+                    <p>
+                        R. Quatro, 786 – Bauxita, Ouro Preto – MG, 35400-000 (ICEB)</br>
+                        Email: xr4goodlab@gmail.com
+                    </p>
+                    <div class="social">
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
