--- a/HTML-CSS/Atividade-Final/index.html
+++ b/HTML-CSS/Atividade-Final/index.html
@@ -51,8 +51,26 @@
                         dignissimos? 
                     </p>
                 </div>
+                
                 <div class="valores">
-                    <h2>Nossos Valores</h2>
+                    <div class="valor">
+                        <img src="img/icon-group.png" alt="">
+                        <h3>Andrea Bianchi</h3>
+                        <h4>Professor</h4>
+                    </div>
+                    <div class="valor">
+                        <img src="img/icon-group.png" alt="">
+                        <h3>Rodrigo Ribeiro</h3>
+                        <h4>Professor</h4>
+                    </div>
+                    <div class="valor">
+                        <img src="img/icon-group.png" alt="">
+                        <h3>Saul Delabrida</h3>
+                        <h4>Professor</h4>
+                    </div>
+                </div>
+
+                <div class="valores">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia 
                         modi ut maxime debitis! Assumenda pariatur voluptatem illum voluptatum 
