--- a/JavaScript/Aula05/index.html
+++ b/JavaScript/Aula05/index.html
@@ -8,7 +8,10 @@
     <title>Interruptor Web</title>
   </head>
   <body>
-    <img src="imagens/Desligada.png" alt="">
-    <button>Ligar</button>
+    <main>
+      <img src="imagens/Desligada.png" alt="">
+      <button>Ligar</button>
+    </main>
+    
   </body>
 </html>
